--- a/html/css/index.css
+++ b/html/css/index.css
@@ -17,12 +17,17 @@ button {
     padding-bottom: 50px;
 }
 
-.chackboxSelecionado {
-    /* border: 1px solid rgb(182, 182, 182); */
-    /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
-    /* border-radius: 5px; */
-}
+/* .chackboxSelecionado {
+    border: 1px solid rgb(182, 182, 182);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 5px;
+} */
 
 body {
     background-color: azure;
+}
+
+.scrollTabela{
+    height:350px;
+    overflow-y: auto;
 }
